--- a/index.html
+++ b/index.html
@@ -1,22 +1,30 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>login</title>
-		<style>
-			table, th, td {
-				border: 1px solid black;
-			}
-		</style>
-	</head>
-	<body>
-		<table id="chat">
-			<tr>
-				<th>username</th>
-				<th>text</th>
-				<th>time</th>
-			</tr>
-		</table>
-		<button onclick="message()">message</button>
-		<script type="text/javascript" src="script.js"></script>
-	</body>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<title>Chat - Customer Module</title>
+<link type="text/css" rel="stylesheet" href="style.css" />
+</head>
+ 
+<div id="wrapper">
+    <div id="menu">
+        <p class="welcome">Welcome, <b></b></p>
+        <p class="logout"><a id="exit" href="#">Exit Chat</a></p>
+        <div style="clear:both"></div>
+    </div>
+     
+    <div id="chatbox"></div>
+     
+    <form name="message" action="">
+        <input name="usermsg" type="text" id="usermsg" size="63" />
+        <input name="submitmsg" type="submit"  id="submitmsg" value="Send" />
+    </form>
+</div>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
+<script type="text/javascript">
+// jQuery Document
+$(document).ready(function(){
+ 
+});
+</script>
+</body>
 </html>
